...
        <Button
            android:id="@+id/editcancle"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="취소" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
...
